# wasix-rust-examples

./: README.md
news-web-scraper/: Cargo.toml  DESIGN.md  README.md  app.yaml  wasmer.toml
news-web-scraper/src/: main.rs  news_scraper.rs
wasix-axum/: Cargo.toml  README.md  app.yaml  wasmer.toml
wasix-axum/src/: main.rs
wasix-condvar/: Cargo.toml  README.md
wasix-condvar/src/: main.rs
wasix-grpc/: Cargo.toml  README.md
wasix-grpc/proto/: helloworld.proto
wasix-grpc/src/: client.rs  server.rs
wasix-helloworld-tonic/: Cargo.toml  README.md
wasix-helloworld-tonic/src/: client.rs  server.rs
wasix-htmx/: Cargo.toml  Makefile.toml  README.md  app.yaml  wasmer.toml
wasix-htmx/src/: main.rs
wasix-htmx/src/pages/: fortune.rs  html_template.rs  mod.rs  next_prime.rs
wasix-htmx/templates/components/: hero.html
wasix-nats/: Cargo.toml  README.md  nats-server.conf  wasmer.toml
wasix-nats/src/: main.rs
wasix-postgres/: .env  Cargo.toml  wasmer.toml
wasix-postgres/src/: main.rs
wasix-reqwest-proxy/: Cargo.toml  README.md  app.yaml  wasmer.toml
wasix-reqwest-proxy/src/: main.rs
wasix-spawn/: Cargo.toml  wasmer.toml
wasix-spawn/src/: main.rs
wasix-subprocess/: Cargo.toml  README.md  wasmer.toml
wasix-subprocess/src/: main.rs
wasix-threading/: Cargo.toml  README.md
wasix-tokio/: Cargo.toml
wasix-tokio/src/: main.rs
