[package]
name = "news-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "net",
    "signal",
] }
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27", features = [
    "server",
] }
scraper = "0.17.1"
colored = "2"

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
