[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
    "full",
] }
libc = { version = "0.2.139", git = "https://github.com/wasix-org/libc.git", branch = "master" }

[build-dependencies]
tonic-build = "0.9"

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
