[package]
name = "wasix-nats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "epoll", default-features = false, features = [
    "full",
] }
async-nats = { version = "0.31.0", git = "https://github.com/wasix-org/nats.rs.git", branch = "wasix" }
bytes = "1.4.0"
futures = "0.3.28"


[patch.crates-io]
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
async-nats = { version = "0.31.0", git = "https://github.com/wasix-org/nats.rs.git", branch = "wasix" }
