[package]
name = "wasix-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "=1.24.2", git = "https://github.com/theduke/tokio.git", branch = "wasix-1.24.2-fixed", features = [
    "full",
] }
